# tg-export

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/adrs/: ADR-0001-delegated-exporter-architecture.md  ADR-0002-telethon-mtproto-engine.md  ADR-0003-directory-tree-ndjson-output.md  ADR-0004-schema-version-lockstep.md  ADR-0005-resolve-link-entities-avoid-utf16.md  ADR-0006-per-user-api-credential-default.md  ADR-0007-non-channel-default-scope.md  ADR-0008-append-in-place-incremental.md  ADR-0009-session-security-and-sentinel-exits.md  ADR-0010-distribution-github-mit-pinned-wheels.md  ADR-0011-tdl-raw-transform-pivot.md
docs/openspec/specs/telegram-json-export/: design.md  spec.md
schema/: manifest.schema.json  message.schema.json
src/tg_export/: __init__.py  adapter.py  archive.py  auth.py  cli.py  errors.py  export.py  jsonio.py  logging.py  mapping.py  media.py  reliability.py  schemas.py  transform.py
tests/: conftest.py  synthetic.py  test_auth.py  test_cli_export.py  test_determinism.py  test_export.py  test_fake_client.py  test_golden.py  test_incremental.py  test_mapping.py  test_media.py  test_packaging.py  test_reliability.py  test_schema.py  test_transform.py
tests/fixtures/golden/: manifest.json
tests/fixtures/golden/chats/: 1001.ndjson  5005.ndjson
